--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/background"
     android:padding="16dp"
     tools:context=".SignUpActivity">
@@ -13,14 +14,14 @@
         android:orientation="vertical">
 
         <ImageView
-            android:layout_width="match_parent"
+            android:layout_width="240dp"
             android:layout_height="180dp"
-            android:layout_marginStart="52dp"
+            android:layout_gravity="center_horizontal"
             android:layout_marginTop="52dp"
-            android:layout_marginEnd="52dp"
             android:src="@drawable/logo_2" />
 
         <EditText
+            android:textColor="@color/white"
             android:id="@+id/name_et"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -31,6 +32,7 @@
             android:textColorHint="@color/white" />
 
         <EditText
+            android:textColor="@color/white"
             android:id="@+id/email_et"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -41,12 +43,13 @@
             android:textColorHint="@color/white" />
 
         <EditText
+            android:textColor="@color/white"
             android:id="@+id/password_et"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
             android:backgroundTint="@color/white"
-            android:drawableEnd="@drawable/ic_visibility_on"
+            android:drawableEnd="@drawable/ic_visibility_off"
             android:hint="Password"
             android:inputType="textPassword"
             android:textColorHint="@color/white" />
@@ -60,24 +63,24 @@
             android:textColor="@color/dark_blue" />
 
         <LinearLayout
-            android:layout_marginTop="32dp"
-            android:gravity="center_horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
+            android:gravity="center_horizontal">
 
             <TextView
-                android:textColor="@color/white"
-                android:textSize="18sp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:text="Have an account, "
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:textColor="@color/white"
+                android:textSize="18sp" />
 
             <TextView
-                android:textSize="18sp"
-                android:textColor="@color/gold"
-                android:text="Login"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:text="Login"
+                android:textColor="@color/gold"
+                android:textSize="18sp" />
 
         </LinearLayout>
 
