--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,12 +2,12 @@
 <resources>
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#F0EFF3</color>
-    <color name="purple_700">#333f5b</color>
+    <color name="purple_700">#1e2940</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="gold">#E1C142</color>
-    <color name="dark_blue">#333f5b</color>
+    <color name="dark_blue">#1e2940</color>
     <color name="gray">#F0EFF3</color>
 </resources>
