--- a/app/src/main/res/layout/activity_event_details.xml
+++ b/app/src/main/res/layout/activity_event_details.xml
@@ -78,14 +78,14 @@
                 tools:text="@tools:sample/lorem/random" />
 
             <TextView
-                android:drawablePadding="8dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:drawablePadding="8dp"
+                android:text="Location"
                 android:textColor="@color/white"
                 android:textSize="20sp"
-                android:layout_marginTop="16dp"
                 android:textStyle="bold"
-                android:text="Location"
                 app:drawableStartCompat="@drawable/ic_location" />
 
             <TextView
@@ -99,14 +99,14 @@
                 tools:text="Greenfields, Sector 42, Faridabad" />
 
             <TextView
-                android:drawablePadding="8dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:drawablePadding="8dp"
+                android:text="Organizer"
                 android:textColor="@color/white"
                 android:textSize="20sp"
-                android:layout_marginTop="16dp"
                 android:textStyle="bold"
-                android:text="Organizer"
                 app:drawableStartCompat="@drawable/ic_person" />
 
             <TextView
@@ -118,6 +118,17 @@
                 android:textSize="18sp"
                 tools:maxLength="400"
                 tools:text="X Company Organizer" />
+
+            <Button
+                android:id="@+id/book_now_btn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="64dp"
+                android:layout_marginBottom="32dp"
+                android:text="Book Now"
+                android:textAllCaps="false"
+                android:textColor="@color/dark_blue"
+                app:layout_constraintTop_toBottomOf="@id/facebook_et" />
 
         </LinearLayout>
 
