--- a/app/src/main/res/layout/activity_event_details.xml
+++ b/app/src/main/res/layout/activity_event_details.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp"
     tools:context=".event.EventDetailsActivity">
 
     <ImageView
@@ -19,6 +18,8 @@
         android:id="@+id/back_iv"
         android:layout_width="40dp"
         android:layout_height="40dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
         android:src="@drawable/ic_back"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -39,7 +40,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginTop="16dp"
+        android:padding="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/event_iv">
 
@@ -69,7 +70,7 @@
 
             <TextView
                 android:id="@+id/description_tv"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:textColor="@color/gray"
@@ -95,7 +96,6 @@
                 android:layout_marginTop="8dp"
                 android:textColor="@color/gray"
                 android:textSize="18sp"
-                tools:maxLength="400"
                 tools:text="Greenfields, Sector 42, Faridabad" />
 
             <TextView
@@ -116,7 +116,6 @@
                 android:layout_marginTop="8dp"
                 android:textColor="@color/gray"
                 android:textSize="18sp"
-                tools:maxLength="400"
                 tools:text="X Company Organizer" />
 
             <Button
