--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -82,4 +82,12 @@
         app:layout_constraintTop_toBottomOf="@id/explore_tv"
         tools:listitem="@layout/seven_days_calendar_list_item" />
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginTop="16dp"
+        tools:listitem="@layout/event_list_item"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/calendar_seven_rv"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
