--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="gold">#E1C142</color>
     <color name="dark_blue">#1e2940</color>
+    <color name="blue">#455478</color>
     <color name="gray">#DBDAF1</color>
 </resources>
