--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -86,8 +86,9 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="16dp"
-        tools:listitem="@layout/event_list_item"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/calendar_seven_rv"/>
+        app:layout_constraintTop_toBottomOf="@id/calendar_seven_rv"
+        tools:listitem="@layout/event_list_item" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
