--- a/app/src/main/res/layout/seven_days_calendar_list_item.xml
+++ b/app/src/main/res/layout/seven_days_calendar_list_item.xml
@@ -2,16 +2,17 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/parent"
     android:layout_width="72dp"
     android:layout_height="96dp"
     android:layout_marginEnd="4dp"
+    app:cardBackgroundColor="@color/dark_blue"
     app:cardCornerRadius="16dp"
     app:cardElevation="0dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/gold"
         android:gravity="center"
         android:orientation="vertical"
         android:padding="8dp">
