--- a/app/src/main/res/layout/calendar_event_list_item.xml
+++ b/app/src/main/res/layout/calendar_event_list_item.xml
@@ -2,6 +2,7 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/parent"
     android:layout_width="match_parent"
     android:layout_height="132dp"
     android:layout_marginBottom="16dp"
@@ -24,7 +25,7 @@
             android:id="@+id/name_tv"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
+            android:layout_marginStart="16dp"
             android:layout_marginEnd="4dp"
             android:textColor="@color/white"
             android:textSize="20sp"
@@ -39,6 +40,7 @@
             android:layout_width="1dp"
             android:layout_height="1dp"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
