--- a/app/src/main/res/drawable/border_blue.xml
+++ b/app/src/main/res/drawable/border_blue.xml
@@ -11,6 +11,8 @@
 
     <corners android:radius="12dp" />
 
+    <solid android:color="@color/blue" />
+
     <padding
         android:bottom="8dp"
         android:left="8dp"
