--- a/app/src/main/res/layout/choose_favorites_layout.xml
+++ b/app/src/main/res/layout/choose_favorites_layout.xml
@@ -24,7 +24,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:background="@drawable/border"
+        android:background="@drawable/border_blue"
         android:text="Sports"
         android:textAllCaps="false"
         android:textColor="@color/white"
@@ -36,7 +36,7 @@
         android:id="@+id/music_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/border"
+        android:background="@drawable/border_blue"
         android:text="Music"
         android:textAllCaps="false"
         android:textColor="@color/white"
@@ -49,7 +49,7 @@
         android:id="@+id/arts_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/border"
+        android:background="@drawable/border_blue"
         android:text="Arts"
         android:textAllCaps="false"
         android:textColor="@color/white"
@@ -59,11 +59,11 @@
         app:layout_constraintStart_toEndOf="@id/music_btn" />
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/technology_btn"
+        android:id="@+id/tech_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:background="@drawable/border"
+        android:background="@drawable/border_blue"
         android:text="Technology"
         android:textAllCaps="false"
         android:textColor="@color/white"
@@ -76,26 +76,26 @@
         android:id="@+id/cars_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/border"
+        android:background="@drawable/border_blue"
         android:text="Cars"
         android:textAllCaps="false"
         android:textColor="@color/white"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@id/technology_btn"
+        app:layout_constraintBottom_toBottomOf="@id/tech_btn"
         app:layout_constraintEnd_toStartOf="@id/arts_btn"
         app:layout_constraintStart_toEndOf="@id/music_btn" />
 
     <Button
-        android:id="@+id/login"
+        android:id="@+id/save_favorites_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:layout_marginBottom="16dp"
-        android:text="Log in"
+        android:text="Save My Favorites"
         android:textAllCaps="false"
         android:textColor="@color/dark_blue"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/technology_btn"
+        app:layout_constraintTop_toBottomOf="@id/tech_btn"
         app:layout_goneMarginTop="32dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
